--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -12,39 +12,39 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-native-community/datetimepicker": "^8.6.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.3.0",
     "@react-navigation/native": "^7.1.0",
     "@react-navigation/native-stack": "^7.3.0",
     "expo": "~54.0.0",
-    "expo-apple-authentication": "~7.2.0",
-    "expo-auth-session": "~6.0.0",
-    "expo-camera": "~16.1.0",
-    "expo-crypto": "~14.1.0",
-    "expo-file-system": "~18.1.0",
-    "expo-font": "~13.3.0",
-    "expo-image": "~2.1.0",
-    "expo-image-picker": "~16.1.0",
-    "expo-linear-gradient": "~14.1.0",
-    "expo-linking": "~7.1.0",
-    "expo-secure-store": "~14.2.0",
-    "expo-splash-screen": "~0.29.0",
-    "expo-status-bar": "~2.2.0",
-    "expo-web-browser": "~14.0.0",
+    "expo-apple-authentication": "~8.0.8",
+    "expo-auth-session": "~7.0.10",
+    "expo-camera": "~17.0.10",
+    "expo-crypto": "~15.0.8",
+    "expo-file-system": "~19.0.21",
+    "expo-font": "~14.0.11",
+    "expo-image": "~3.0.11",
+    "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.11",
+    "expo-secure-store": "~15.0.8",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
     "firebase": "^11.0.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.0",
-    "react-native-safe-area-context": "~5.4.0",
-    "react-native-screens": "~4.11.0",
-    "react-native-svg": "~15.11.0",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/react": "~19.1.0",
-    "typescript": "~5.7.0"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
