--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -27,6 +27,9 @@
     "production": {
       "extends": "base",
       "autoIncrement": true,
+      "env": {
+        "SENTRY_DISABLE_AUTO_UPLOAD": "true"
+      },
       "ios": {
         "resourceClass": "m-medium"
       }
